# syntok

./: .gitignore  .travis.yml  LICENSE  Makefile  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yaml
syntok/: _segmentation_states.py  segmenter.py  segmenter_test.py  tokenizer.py  tokenizer_test.py  tokenizer_test.txt
