[tool.poetry]
name = "syntok"
version = "1.4.0"
description = "Text tokenization and sentence segmentation (segtok v2)."
authors = ["Florian Leitner <me@fnl.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
regex = "^2021.11.10"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
mypy = "^0.931"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"